# secure-password-cli

./: CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile  README.md  TODO.md  exclude.txt  install.bat  install.sh  mingw-toolchain.cmake  secure-password-cli  secure-password.desktop  uninstall.bat  uninstall.sh
.github/workflows/: build.yml
assets/: style.css
data/: common_passwords.txt
include/: breached.h  crypto.h  entropy.h  generator.h  gui.h  gui_create_account.h  gui_footer.h  gui_generator.h  gui_globals.h  gui_home.h  gui_login.h  gui_main_window.h  gui_page_generator.h  gui_page_settings.h  gui_page_vault.h  gui_page_vault_events.h  gui_utils.h  json_parser.h  utils.h  validator.h  vault.h
packaging/: secure-password.desktop
src/: breached.c  crypto.c  entropy.c  generator.c  gui.c  gui_create_account.c  gui_footer.c  gui_generator.c  gui_globals.c  gui_home.c  gui_login.c  gui_main_window.c  gui_page_generator.c  gui_page_settings.c  gui_page_vault.c  gui_page_vault_events.c  gui_utils.c  json_parser.c  main.c  utils.c  validator.c  vault.c
